Auto-size spell names to prevent linewrapping

--- a/src/css/SpellCard.css
+++ b/src/css/SpellCard.css
@@ -30,7 +30,7 @@
 }
 
 .Name {
-    padding: 2px;
+    padding: 2px 8px;
     background-color: white;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
